Modified Data and Converted to json

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "validators": "^0.3.1"
   }
 }
