--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^8.3.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
+    "router": "^1.3.8",
     "validators": "^0.3.1"
   }
 }
