--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "Aman Mishra",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
@@ -17,6 +18,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "router": "^1.3.8",
+    "validator": "^13.11.0",
     "validators": "^0.3.1"
   }
 }
