--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.8.0",
     "framer-motion": "^11.0.24",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
