--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
+    "@heroicons/react": "^2.1.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +13,8 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.8.0",
     "framer-motion": "^11.0.24",
+    "headlessui": "^0.0.0",
+    "heroicons": "^2.1.3",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
