--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "swiper": "^11.1.1",
     "tailwind-merge": "^2.2.2",
     "web-vitals": "^2.1.4"
   },
