--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-youtube": "^10.1.0",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.2.2",
     "web-vitals": "^2.1.4"
